my first commit

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <div class="channel channel-list">
                         <ul>
                             <li class="channel-item channel-item--active"><a href=""><span>general</span></a></li>
-                            <li class="channel-item "><a href=""><span>general</span></a></li>
+                            <li class="channel-item "><a href=""><span>Что то я поменял</span></a></li>
                             <li class="channel-item "><a href=""><span>general</span></a></li>
                             <li class="channel-item "><a href=""><span>general</span></a></li>
                             <li class="channel-item "><a href=""><span>general</span></a></li>
